use border box to fix cross browser alignment

--- a/src/css/_accordion.scss
+++ b/src/css/_accordion.scss
@@ -100,10 +100,11 @@ cagov-accordion:defined.accordion-chart-drawer {
     }
 
     .cagov-open-indicator:after {
-      top: -11px;
+      height: 24px;
       left: -5px;
-      width: 20px;
-      height: 20px;
+      top: -11px;
+      width: 24px;
+      box-sizing: border-box;
     }
 
     .cagov-open-indicator:before {
